--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.1.4",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "react-refresh": "^0.16.0",
     "vite": "^6.0.11"
   }
 }
