--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 MONGODB_URI="mongodb+srv://shubham4206pict:Shubham4206@cluster0.c6aoe.mongodb.net"
+JWT_SECRET='secrete#app'
+
+
+NODE_ENV='development'
