--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
