--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.10.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
