--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "server": "nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
