--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.4",
     "socket.io-client": "^4.8.1",
+    "sr-jr-connect": "file:..",
     "tailwindcss": "^4.0.0",
     "zustand": "^5.0.3"
   },
