--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "socket.io-client": "^4.8.1",
     "sr-jr-connect": "file:..",
     "tailwindcss": "^4.0.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
