--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -20,8 +21,7 @@
     "socket.io-client": "^4.8.1",
     "sr-jr-connect": "file:..",
     "tailwindcss": "^4.0.0",
-    "zustand": "^5.0.3",
-    "@vitejs/plugin-react": "^4.3.4"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
