--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,19 @@
     "socket.io-client": "^4.8.1",
     "sr-jr-connect": "file:..",
     "tailwindcss": "^4.0.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^5.0.0-beta.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "react-refresh": "^0.16.0",
+    "vite": "^6.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
