refactor: optimize build script for improved installation process

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Welcome to the **Senior-Junior Connect** project, a web-based platform built using the **MERN stack (MongoDB, Express.js, React.js, Node.js)**, designed to connect alumni and students from a college for communication, resource sharing, and networking.",
   "main": "index.js",
   "scripts": {
-    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
-    "start": "npm run start --prefix backend"
+    "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start":"npm run start --prefix backend"
   },
   "repository": {
     "type": "git",
