--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.4",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.3"
+    "sr-jr-connect": "file:..",
+    "zustand": "^5.0.3",
+    "vite": "^6.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
