--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "react-router-dom": "^7.1.4",
     "socket.io-client": "^4.8.1",
     "sr-jr-connect": "file:..",
-    "zustand": "^5.0.3",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
